button added and Ui changes

--- a/frontend/dashboard/src/app/chart/chart.component.html
+++ b/frontend/dashboard/src/app/chart/chart.component.html
@@ -27,11 +27,13 @@
 </div> -->
 
 <!-- Update your HTML template -->
-<div class="back-link">
-  <a routerLink="/landing">back</a>
+<div class="button-container">
+  <button class="styled-button" type="button" routerLink="/landing">
+    back
+  </button>
 </div>
 <div class="container-fluid main-container">
-  <h1 class="text-center mb-5">Charts!!!</h1>
+  <h1 class="text-center mb-2">Charts!!!</h1>
   <div class="row mt-5">
     <!-- <div class="col-md-6">
       <div id="div-container" class="chart-container"></div>
