--- a/frontend/dashboard/src/app/chart/chart.component.scss
+++ b/frontend/dashboard/src/app/chart/chart.component.scss
@@ -52,3 +52,28 @@
 // }
 
 /* Customize Bootstrap colors or other styles as needed */
+
+.button-container {
+  text-align: right;
+}
+
+.styled-button {
+  display: inline-block;
+  padding: 5px 5px;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+  border: 2px solid #3498db;
+  color: #3498db;
+  background-color: #ffffff;
+  border-radius: 5px;
+  transition: background-color 0.3s, color 0.3s, border-color 0.3s;
+}
+
+.styled-button:hover {
+  background-color: #3498db;
+  color: #ffffff;
+  border-color: #ffffff;
+}
