sea import report api in lcl and documentation and chart works

--- a/frontend/dashboard/src/app/views/pages/sea-import-dashboard/sea-import-dashboard.component.html
+++ b/frontend/dashboard/src/app/views/pages/sea-import-dashboard/sea-import-dashboard.component.html
@@ -62,7 +62,122 @@
                           Customer Service (LCL)
                         </mat-panel-title>
                       </mat-expansion-panel-header>
-                      <mat-table [dataSource]="datasource_export_LCL_CS">
+                      <mat-table [dataSource]="datasource_import_LCL_CS">
+                        <ng-container matColumnDef="pendinActions">
+                          <mat-header-cell *matHeaderCellDef
+                            >Pending Actions</mat-header-cell
+                          >
+                          <mat-cell *matCellDef="let element">{{
+                            element.action
+                          }}</mat-cell>
+                        </ng-container>
+
+                        <ng-container matColumnDef="count">
+                          <mat-header-cell *matHeaderCellDef
+                            >Count</mat-header-cell
+                          >
+                          <mat-cell *matCellDef="let element">
+                            <ng-container
+                              *ngIf="element.count > 0; else noData"
+                            >
+                              <!-- Display count and provide click event if count is greater than 0 -->
+                              <a
+                                href="javascript:void(0);"
+                                (click)="
+                                  get_import_lcl_Count_details_navigation(
+                                    element.action
+                                  )
+                                "
+                              >
+                                {{ element.count }}
+                              </a>
+                            </ng-container>
+                            <!-- If count is 0, display 'No data found' message -->
+                            <ng-template #noData>_</ng-template>
+                          </mat-cell>
+                        </ng-container>
+
+                        <ng-container matColumnDef="countSLA">
+                          <mat-header-cell *matHeaderCellDef
+                            >Within SLA</mat-header-cell
+                          >
+                          <mat-cell *matCellDef="let element">
+                            <ng-container
+                              *ngIf="element.withinSLA !== 0; else noDataFound"
+                            >
+                              <a
+                                href="javascript:void(0);"
+                                (click)="
+                                  get_import_lcl_details_Withinsla_navigation(
+                                    element.action,
+                                    element.withinSLA
+                                  )
+                                "
+                                >{{ element.withinSLA }}</a
+                              >
+                            </ng-container>
+                            <ng-template #noDataFound>_</ng-template>
+                          </mat-cell>
+                        </ng-container>
+
+                        <!-- <ng-container matColumnDef="countOSLA">
+                          <mat-header-cell *matHeaderCellDef
+                            >Out of SLA</mat-header-cell
+                          >
+                          <mat-cell *matCellDef="let element"
+                            ><a href="/sea-export">{{
+                              element.outOfSLA
+                            }}</a></mat-cell
+                          >
+                        </ng-container> -->
+
+                        <ng-container matColumnDef="countOSLA">
+                          <mat-header-cell *matHeaderCellDef
+                            >Out of SLA</mat-header-cell
+                          >
+                          <mat-cell *matCellDef="let element">
+                            <ng-container
+                              *ngIf="element.outOfSLA !== 0; else noDataFound"
+                            >
+                              <a
+                                href="javascript:void(0);"
+                                (click)="
+                                  get_import_lcl_details_OutOfSla_navigation(
+                                    element.action,
+                                    element.withinSLA,
+                                    element.outOfSLA
+                                  )
+                                "
+                                >{{ element.outOfSLA }}</a
+                              >
+                            </ng-container>
+                            <ng-template #noDataFound>_</ng-template>
+                          </mat-cell>
+                        </ng-container>
+
+                        <mat-header-row
+                          *matHeaderRowDef="displayedColumnsSLA"
+                        ></mat-header-row>
+                        <mat-row
+                          *matRowDef="let row; columns: displayedColumnsSLA"
+                        ></mat-row>
+                      </mat-table>
+                    </mat-expansion-panel>
+                    <!--</mat-accordion> -->
+                  </div>
+                </div>
+                <!-- <div class="col-lg-12"></div> -->
+                <div class="row">
+                  <div class="col-md-6 mb-4">
+                    <!--<mat-accordion>-->
+                    <mat-expansion-panel [expanded]="true">
+                      <mat-expansion-panel-header>
+                        <mat-panel-title class="title-class">
+                          Customer Service (FCL)
+                        </mat-panel-title>
+                      </mat-expansion-panel-header>
+                      <mat-divider></mat-divider>
+                      <mat-table [dataSource]="datasource_import_LCL_CS">
                         <ng-container matColumnDef="pendinActions">
                           <mat-header-cell *matHeaderCellDef
                             >Pending Actions</mat-header-cell
@@ -78,7 +193,7 @@
                           >
                           <mat-cell *matCellDef="let element"
                             ><a href="/sea-export">{{
-                              element.withinSLA + element.outOfSLA
+                              element.count
                             }}</a></mat-cell
                           >
                         </ng-container>
@@ -113,71 +228,6 @@
                         ></mat-row>
                       </mat-table>
                     </mat-expansion-panel>
-                    <!--</mat-accordion> -->
-                  </div>
-                </div>
-                <!-- <div class="col-lg-12"></div> -->
-                <div class="row">
-                  <div class="col-md-6 mb-4">
-                    <!--<mat-accordion>-->
-                    <mat-expansion-panel [expanded]="true">
-                      <mat-expansion-panel-header>
-                        <mat-panel-title class="title-class">
-                          Customer Service (FCL)
-                        </mat-panel-title>
-                      </mat-expansion-panel-header>
-                      <mat-divider></mat-divider>
-                      <mat-table [dataSource]="dataSource2">
-                        <ng-container matColumnDef="pendinActions">
-                          <mat-header-cell *matHeaderCellDef
-                            >Pending Actions</mat-header-cell
-                          >
-                          <mat-cell *matCellDef="let element">{{
-                            element.name
-                          }}</mat-cell>
-                        </ng-container>
-
-                        <ng-container matColumnDef="count">
-                          <mat-header-cell *matHeaderCellDef
-                            >Count</mat-header-cell
-                          >
-                          <mat-cell *matCellDef="let element"
-                            ><a href="/sea-export">{{
-                              element.count
-                            }}</a></mat-cell
-                          >
-                        </ng-container>
-
-                        <ng-container matColumnDef="countSLA">
-                          <mat-header-cell *matHeaderCellDef
-                            >Within SLA</mat-header-cell
-                          >
-                          <mat-cell *matCellDef="let element"
-                            ><a href="/sea-export">{{
-                              element.countSLA
-                            }}</a></mat-cell
-                          >
-                        </ng-container>
-
-                        <ng-container matColumnDef="countOSLA">
-                          <mat-header-cell *matHeaderCellDef
-                            >Out of SLA</mat-header-cell
-                          >
-                          <mat-cell *matCellDef="let element"
-                            ><a href="/sea-export">{{
-                              element.countOSLA
-                            }}</a></mat-cell
-                          >
-                        </ng-container>
-
-                        <mat-header-row
-                          *matHeaderRowDef="displayedColumnsSLA"
-                        ></mat-header-row>
-                        <mat-row
-                          *matRowDef="let row; columns: displayedColumnsSLA"
-                        ></mat-row>
-                      </mat-table>
-                    </mat-expansion-panel>
                     <!--</mat-accordion>-->
                   </div>
 
@@ -189,13 +239,15 @@
                           Documentation
                         </mat-panel-title>
                       </mat-expansion-panel-header>
-                      <mat-table [dataSource]="dataSource3">
+                      <mat-table
+                        [dataSource]="datasource_import_Documentation_CS"
+                      >
                         <ng-container matColumnDef="pendinActions">
                           <mat-header-cell *matHeaderCellDef
                             >Pending Actions</mat-header-cell
                           >
                           <mat-cell *matCellDef="let element">{{
-                            element.name
+                            element.action
                           }}</mat-cell>
                         </ng-container>
 
@@ -203,34 +255,74 @@
                           <mat-header-cell *matHeaderCellDef
                             >Count</mat-header-cell
                           >
-                          <mat-cell *matCellDef="let element"
-                            ><a href="/sea-export">{{
-                              element.count
-                            }}</a></mat-cell
-                          >
+                          <mat-cell *matCellDef="let element">
+                            <ng-container
+                              *ngIf="element.count > 0; else noData"
+                            >
+                              <!-- Display count and provide click event if count is greater than 0 -->
+                              <a
+                                href="javascript:void(0);"
+                                (click)="
+                                  get_import_documentation_Count_details_navigation(
+                                    element.action
+                                  )
+                                "
+                              >
+                                {{ element.count }}
+                              </a>
+                            </ng-container>
+                            <!-- If count is 0, display 'No data found' message -->
+                            <ng-template #noData>_</ng-template>
+                          </mat-cell>
                         </ng-container>
 
                         <ng-container matColumnDef="countSLA">
                           <mat-header-cell *matHeaderCellDef
                             >Within SLA</mat-header-cell
                           >
-                          <mat-cell *matCellDef="let element"
-                            ><a href="/sea-export">{{
-                              element.countSLA
-                            }}</a></mat-cell
-                          >
+                          <mat-cell *matCellDef="let element">
+                            <ng-container
+                              *ngIf="element.withinSLA !== 0; else noDataFound"
+                            >
+                              <a
+                                href="javascript:void(0);"
+                                (click)="
+                                  get_import_documentation_details_Withinsla_navigation(
+                                    element.action,
+                                    element.withinSLA
+                                  )
+                                "
+                                >{{ element.withinSLA }}</a
+                              >
+                            </ng-container>
+                            <ng-template #noDataFound>_</ng-template>
+                          </mat-cell>
                         </ng-container>
 
                         <ng-container matColumnDef="countOSLA">
                           <mat-header-cell *matHeaderCellDef
                             >Out of SLA</mat-header-cell
                           >
-                          <mat-cell *matCellDef="let element"
-                            ><a href="/sea-export">{{
-                              element.countOSLA
-                            }}</a></mat-cell
-                          >
+                          <mat-cell *matCellDef="let element">
+                            <ng-container
+                              *ngIf="element.outOfSLA !== 0; else noDataFound"
+                            >
+                              <a
+                                href="javascript:void(0);"
+                                (click)="
+                                  get_import_documentation_details_OutOfSla_navigation(
+                                    element.action,
+                                    element.withinSLA,
+                                    element.outOfSLA
+                                  )
+                                "
+                                >{{ element.outOfSLA }}</a
+                              >
+                            </ng-container>
+                            <ng-template #noDataFound>_</ng-template>
+                          </mat-cell>
                         </ng-container>
+
                         <mat-header-row
                           *matHeaderRowDef="displayedColumnsSLA"
                         ></mat-header-row>
