--- a/frontend/dashboard/src/app/landing-chart/landing-chart.component.html
+++ b/frontend/dashboard/src/app/landing-chart/landing-chart.component.html
@@ -1,17 +1,10 @@
 <div>
   <mat-tab-group>
-    <mat-tab label="Sea Export"
-      ><app-sea-dashboard></app-sea-dashboard
-    ></mat-tab>
-    <mat-tab label="Sea Import"
-      ><app-sea-import-dashboard></app-sea-import-dashboard>
-    </mat-tab>
-    <mat-tab label="Air Export"
-      ><app-air-export-dashboard></app-air-export-dashboard
-    ></mat-tab>
-    <mat-tab label="Air Import">
-      <app-air-import-dashboard></app-air-import-dashboard>
-    </mat-tab>
+    <mat-tab label="Sea Export"></mat-tab>
+    <mat-tab label="Sea Import"></mat-tab>
+    <mat-tab label="Air Export"></mat-tab>
+    <mat-tab label="Air Import"></mat-tab>
   </mat-tab-group>
 </div>
+
 <router-outlet></router-outlet>
