--- a/frontend/dashboard/src/app/landing-page/landing-page.component.html
+++ b/frontend/dashboard/src/app/landing-page/landing-page.component.html
@@ -4,7 +4,7 @@
             <div class="kt-portlet-body">
                 <div class="kt-portlet-preview"> -->
 <div class="button-container">
-  <button class="styled-button" type="button" routerLink="/chart">
+  <button class="styled-button" type="button" routerLink="/landing-chart">
     View Chart
   </button>
 </div>
