--- a/frontend/dashboard/src/app/chart/chart-sea-export/chart-sea-export/chart-sea-export.component.html
+++ b/frontend/dashboard/src/app/chart/chart-sea-export/chart-sea-export/chart-sea-export.component.html
@@ -1,30 +1,35 @@
 <div class="container-fluid main-container">
-  <!-- <h1 class="text-center mb-2">Charts!!!</h1> -->
-  <div class="row mt-5">
-    <!-- <div class="col-md-6">
-        <div id="div-container" class="chart-container"></div>
-      </div> -->
-    <div class="col-md-6">
-      <div id="div-container-stackedchart-sales" class="chart-container"></div>
-    </div>
-    <div class="col-md-6">
-      <div id="div-container-stackedchart" class="chart-container"></div>
+
+  <div *ngIf="isChartsLoading" class="spinner-overlay">
+    <div class="spinner-container">
+      <mat-spinner></mat-spinner>
+      <p>Loading charts...</p>
     </div>
   </div>
-  <div class="row mt-5">
-    <div class="col-md-6">
-      <div id="div-container-stackedchart1" class="chart-container"></div>
+  <div [hidden]="isChartsLoading">
+    <div class="row mt-5">
+      <div class="col-md-6">
+        <div id="div-container-stackedchart-sales" class="chart-container"></div>
+      </div>
+      <div class="col-md-6">
+        <div id="div-container-stackedchart" class="chart-container"></div>
+      </div>
     </div>
-    <div class="col-md-6">
-      <div id="div-container-stackedchart3" class="chart-container"></div>
+    <div class="row mt-5">
+      <div class="col-md-6">
+        <div id="div-container-stackedchart1" class="chart-container"></div>
+      </div>
+      <div class="col-md-6">
+        <div id="div-container-stackedchart3" class="chart-container"></div>
+      </div>
     </div>
-  </div>
-  <div class="row mt-5">
-    <div class="col-md-6">
-      <div id="div-container-stackedchart2" class="chart-container"></div>
-    </div>
-    <div class="col-md-6">
-      <div id="div-container-stackedchart4" class="chart-container"></div>
+    <div class="row mt-5">
+      <div class="col-md-6">
+        <div id="div-container-stackedchart2" class="chart-container"></div>
+      </div>
+      <div class="col-md-6">
+        <div id="div-container-stackedchart4" class="chart-container"></div>
+      </div>
     </div>
   </div>
 </div>
