--- a/frontend/dashboard/src/app/chart/chart-sea-export/chart-sea-export/chart-sea-export.component.scss
+++ b/frontend/dashboard/src/app/chart/chart-sea-export/chart-sea-export/chart-sea-export.component.scss
@@ -77,3 +77,23 @@
   color: #ffffff;
   border-color: #ffffff;
 }
+
+
+
+.spinner-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.7); /* Adjust the background color and opacity as needed */
+  z-index: 1000; /* Ensure the spinner overlay appears above other content */
+}
+
+.spinner-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
