--- a/frontend/dashboard/src/app/chart/chart-sea-export/chart-sea-export/chart-sea-export.component.html
+++ b/frontend/dashboard/src/app/chart/chart-sea-export/chart-sea-export/chart-sea-export.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid main-container">
 
-  <div *ngIf="isChartsLoading" class="spinner-overlay">
-    <div class="spinner-container">
+  <div *ngIf="isChartsLoading" >
+    <div>
       <mat-spinner></mat-spinner>
       <p>Loading charts...</p>
     </div>
