--- a/frontend/dashboard/src/app/layout/layout.component.html
+++ b/frontend/dashboard/src/app/layout/layout.component.html
@@ -37,9 +37,10 @@
           <!-- end:: Content Body -->
         </div>
         <!-- end:: Content -->
-
-        <app-footer></app-footer>
       </div>
     </div>
   </div>
+  <!-- begin:: Footer -->
+  <app-footer></app-footer>
+  <!-- end:: Footer -->
 </ng-container>
