--- a/frontend/dashboard/src/app/sidebar/sidebar.component.html
+++ b/frontend/dashboard/src/app/sidebar/sidebar.component.html
@@ -10,24 +10,24 @@
     (mouseover)="toggleSidebar()"
     (mouseout)="toggleSidebar()"
   >
-    <a href="/chart"
+    <!-- <a href="/chart"
       ><i class="material-icons">language </i
       ><span class="icon-text">Frieght Forwarding</span></a
     ><br />
     <a href="/home"><i class="material-icons">home </i
       ><span class="icon-text">Home Page</span></a
-    ><br />
-    <a href="/operations/dashboard"
+    ><br /> -->
+    <a href="/landing"
       ><i class="material-icons">spa</i><span class="icon-text"></span>Home
       Dashboard</a
     >
   </div>
 
-<div id="main">
-  <!-- <app-landing-page></app-landing-page> -->
-  <!-- <h2>Open/Collapse Sidebar on Hover</h2>
+  <div id="main">
+    <!-- <app-landing-page></app-landing-page> -->
+    <!-- <h2>Open/Collapse Sidebar on Hover</h2>
   <p>Hover over any part of the sidebar to open the it.</p>
   <p>To close the sidebar, move your mouse out of the sidebar.</p> -->
-  
+  </div>
+  <!-- <router-outlet></router-outlet> -->
 </div>
-<!-- <router-outlet></router-outlet> -->
